# next-wasm

./: README.md  next.config.mjs  package.json
app/add-one/: page.tsx
app/api/add/: route.ts
app/api/add-wasm/: route.ts
app/uuid/: page.tsx
components/: RustAdd.tsx  UseEffectLoad.tsx  Uuid.tsx
rust/: Cargo.toml
rust/components/add/: Cargo.toml
rust/components/add/src/: lib.rs
rust/components/uuid/: Cargo.toml
rust/components/uuid/src/: lib.rs
